--- a/templates/_layouts/site.html
+++ b/templates/_layouts/site.html
@@ -89,7 +89,7 @@
 
         objectFitImages();
 
-        const body = document.getElementById('js-headroom');
+        const body = document.getElementById('js-body');
         const headroom = new Headroom(body, {
           offset : 64,
           tolerance : 8,
@@ -157,7 +157,7 @@
 </head>
 
 {# -- BODY CLASS -- #}
-<body id="js-headroom" class="{{ entry is defined ? entry.section.handle : craft.app.request.segments | first }} {{ bodyClass is defined ? bodyClass }}">
+<body id="js-body" class="{{ entry is defined ? entry.section.handle : craft.app.request.segments | first }} {{ bodyClass is defined ? bodyClass }}">
 <!-- You know, rather than reading the source like a chump, you can see it all on GitHub like a champ: https://github.com/connor-baer/connorbaer.co -->
 
 
