--- a/templates/food/index.html
+++ b/templates/food/index.html
@@ -47,7 +47,7 @@
   <section class="l-ctnr">
 
     {# -- HEADER -- #}
-    <header class="c-header c-header--tall l-w100">
+    <header class="c-header l-w100">
       <h1 class="c-header__title c-header__title--color">{{ helpers.striptags(entry.title) }}&ensp;</h1>
       <h2 class="c-header__subtitle">{{ helpers.striptags(entry.description) }}</h2>
     </header>
