--- a/templates/food/_entry.html
+++ b/templates/food/_entry.html
@@ -65,7 +65,6 @@
               <h1 class="c-recipe__title">{{ helpers.striptags(entry.title) }}</h1>
               <p class="c-recipe__meta">
                 <span><svg class="c-recipe__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M15 1H9v2h6V1zm-4 13h2V8h-2v6zm8.03-6.61l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42C16.07 4.74 14.12 4 12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9 9-4.03 9-9c0-2.12-.74-4.07-1.97-5.61zM12 20c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"/></svg>{{ entry.recipe.totalTime }} mins</span>
-                <span><svg class="c-recipe__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M14.4 6L14 4H5v17h2v-7h5.6l.4 2h7V6z"/></svg>{% for tag in entry.tags_recipe %}{{ tag }}{% endfor %}</span>
               </p>
             </div>
           </div>
@@ -93,7 +92,7 @@
     {# -- RELATED RECIPES -- #}
     {% set relatedRecipes = craft.entries({
     section: entry.section.handle,
-    relatedTo: entry.tags,
+    relatedTo: entry.labels,
     id: 'not ' ~ entry.id,
     limit: '3',
     }) %}
@@ -117,7 +116,6 @@
               <h3 class="c-recipeCard__title">{{ item.title }}</h3>
               <p class="c-recipe__meta">
                 <span><svg class="c-recipe__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M15 1H9v2h6V1zm-4 13h2V8h-2v6zm8.03-6.61l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42C16.07 4.74 14.12 4 12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9 9-4.03 9-9c0-2.12-.74-4.07-1.97-5.61zM12 20c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"/></svg>{{ item.recipe.totalTime }} mins</span>
-                <span><svg class="c-recipe__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M14.4 6L14 4H5v17h2v-7h5.6l.4 2h7V6z"/></svg>{% for tag in item.tags %}{{ tags }}{% endfor %}</span>
               </p>
             </header>
           </article>
