--- a/source/css/components/_footer.scss
+++ b/source/css/components/_footer.scss
@@ -27,7 +27,7 @@
   a {
     @include t-link;
 
-    color: oc(primary);
+    color: var(--oc-primary-6);
   }
 }
 
@@ -64,7 +64,7 @@
 
     &:hover,
     &:focus {
-      color: oc(primary);
+      color: var(--oc-primary-6);
     }
   }
 }
