--- a/source/css/variables/_colors.scss
+++ b/source/css/variables/_colors.scss
@@ -85,6 +85,17 @@ $oc-secondary-list: (
   #{--oc-gray-7}: $oc-gray-7;
   #{--oc-gray-8}: $oc-gray-8;
   #{--oc-gray-9}: $oc-gray-9;
+
+  #{--oc-primary-0}: oc(primary, 0);
+  #{--oc-primary-1}: oc(primary, 1);
+  #{--oc-primary-2}: oc(primary, 2);
+  #{--oc-primary-3}: oc(primary, 3);
+  #{--oc-primary-4}: oc(primary, 4);
+  #{--oc-primary-5}: oc(primary, 2);
+  #{--oc-primary-6}: oc(primary, 6);
+  #{--oc-primary-7}: oc(primary, 7);
+  #{--oc-primary-8}: oc(primary, 8);
+  #{--oc-primary-9}: oc(primary, 9);
 }
 
 //  Themes
