--- a/templates/food/_entry.html
+++ b/templates/food/_entry.html
@@ -63,9 +63,7 @@
           <div class="c-recipe__bottom l-ctnr l-flex l-flex--center">
             <div class="l-w75">
               <h1 class="c-recipe__title">{{ helpers.striptags(entry.title) }}</h1>
-              <p class="c-recipe__meta">
-                <span><svg class="c-recipe__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M15 1H9v2h6V1zm-4 13h2V8h-2v6zm8.03-6.61l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42C16.07 4.74 14.12 4 12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9 9-4.03 9-9c0-2.12-.74-4.07-1.97-5.61zM12 20c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"/></svg>{{ entry.recipe.totalTime }} mins</span>
-              </p>
+              {{ elements.recipeMeta(entry) }}
             </div>
           </div>
         </header>
@@ -114,9 +112,7 @@
             </figure>
             <header class="c-recipeCard__content">
               <h3 class="c-recipeCard__title">{{ item.title }}</h3>
-              <p class="c-recipe__meta">
-                <span><svg class="c-recipe__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M15 1H9v2h6V1zm-4 13h2V8h-2v6zm8.03-6.61l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42C16.07 4.74 14.12 4 12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9 9-4.03 9-9c0-2.12-.74-4.07-1.97-5.61zM12 20c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"/></svg>{{ item.recipe.totalTime }} mins</span>
-              </p>
+              {{ elements.recipeMeta(item) }}
             </header>
           </article>
         </a>
