--- a/templates/food/index.html
+++ b/templates/food/index.html
@@ -17,6 +17,13 @@
   <style>
     {{ source(_self ~ '.min.css', ignore_missing = true) }}
   </style>
+  <link rel="preload" href="{{ baseUrl ~ rev('css/food.min.css') }}" as="style" onload="this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" type="text/css" href="{{ baseUrl ~ rev('css/food.min.css') }}"></noscript>
+{% endblock %}
+
+
+{% block noCritical %}
+  <link id="styles" rel="stylesheet" type="text/css" href="{{ baseUrl ~ rev('css/food.min.css') }}">
 {% endblock %}
 
 
@@ -27,17 +34,6 @@
   <script>
   loadjs(['{{ baseUrl ~ rev('js/collection.min.js') }}'], 'react');
   </script>
-{% endblock %}
-
-{% block head %}
-  {{ parent() }}
-
-  {% if not currentCache or currentCache != newCache or devMode %}
-    <link rel="preload" href="{{ baseUrl ~ rev('css/food.min.css') }}" as="style" onload="this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" type="text/css" href="{{ baseUrl ~ rev('css/food.min.css') }}"></noscript>
-  {% else %}
-    <link id="styles" rel="stylesheet" type="text/css" href="{{ baseUrl ~ newCache }}">
-  {% endif %}
 {% endblock %}
 
 
