--- a/templates/madebyconnorDE/index.html
+++ b/templates/madebyconnorDE/index.html
@@ -11,59 +11,59 @@
 {% import '_includes/elements' as elements %}
 {% import '_includes/helpers' as helpers %}
 
+
 {% block critical %}
   <style>
     {{ source(_self ~ '.min.css', ignore_missing = true) }}
   </style>
 {% endblock %}
 
+
 {% block main %}
+  {% cache %}
   {% minify %}
 
-  <article>
+  <section class="l-ctnr">
+    <div class="l-w100 l-columns">
 
-    {# -- HEADER -- #}
-    <header class="l-ctnr">
-      <div class="c-header c-header--tall l-w100">
-        <h1 class="c-header__title c-header__title--color">{{ entry.title | striptags() }}&nbsp;</h1>
-        <h2 class="c-header__subtitle">{{ entry.description | striptags() }}</h2>
-      </div>
-    </header>
+      {# -- HEADER -- #}
+      <header class="c-header">
+        <h1 class="c-header__title c-header__title--color">{{ helpers.striptags(entry.title) }}&ensp;</h1>
+        <h2 class="c-header__subtitle">{{ helpers.striptags(entry.description) }}</h2>
+      </header>
 
-  </article>
+      {# -- ITEMS -- #}
+      {% set items = craft.entries({
+        section: 'work',
+        passphrase: ':empty:',
+        with: ['image']
+      }) %}
 
-  {# -- FEATURED ITEMS -- #}
-  {% set featured = craft.entries({
-    section: 'work',
-    featured: '1',
-    passphrase: ':empty:',
-    with: ['image'],
-    limit: '3'
-  }) %}
+      {% for item in items %}
 
-  {% if featured %}
-    <section class="l-ctnr l-flex">
-      <div class="l-w100">
-        <h3 class="c-cards__title"><a class="t-link" href="/work">Latest Work</a></h3>
-      </div>
-
-      {% for item in featured %}
-        <article class="c-card l-w100">
-          <a class="o-image--hover" href="{{ item.url }}" title="{{ item.title }} for {{ item.client.one().title }}">
+        <article class="c-card">
+          <a href="{{ item.url }}" title="{{ item.title }}">
 
             {% set image = item.image[0] ?? null %}
+
             {% if image %}
+
               <figure class="c-card__image">
-                {{ elements.image(image, 'normal', '21x9', '64rem') }}
+                {{ elements.image(image, null, '1x1', '35rem') }}
               </figure>
+
             {% endif %}
+
             <h3 class="c-card__title">{{ item.title }}</h3>
-            <p class="c-card__meta">{{ item.client.one().title }}</p>
+            <p class="c-card__meta">{% for tag in item.skills %}{{ tag.title }}{% if not loop.last %} + {% endif %}{% endfor %}</p>
           </a>
         </article>
+
       {% endfor %}
-    </section>
-  {% endif %}
+
+    </div>
+  </section>
 
   {% endminify %}
+  {% endcache %}
 {% endblock %}
