--- a/templates/_layouts/site.html
+++ b/templates/_layouts/site.html
@@ -19,7 +19,7 @@
 
 
 {% block head %}
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
 
   {# -- CRITICAL CSS -- #}
