Adds per site code injection in head.
Implements #11.

--- a/templates/_layouts/site.html
+++ b/templates/_layouts/site.html
@@ -116,6 +116,8 @@
     });
     </script>
 
+    {{ footer.codeInjection | raw }}
+
     {# -- UPDATE YOUR FUCKING BROWSER -- #}
     <!--[if IE]>
     <script>
