--- a/templates/_includes/elements.html
+++ b/templates/_includes/elements.html
@@ -11,7 +11,7 @@
 {# Category #}
 
 {% macro category(entry) %}
-	<span>{% for category in craft.categories.relatedTo(entry) %}<a class="t-link" href="{{ category.url }}" title="{{ category.title | capitalize }}">{{ category.title | capitalize }}</a>{% if not loop.last %}, {% endif %}{% endfor %}</span>
+	<span>{% for category in craft.categories.relatedTo(entry).all() %}<a class="t-link" href="{{ category.url }}" title="{{ category.title | capitalize }}">{{ category.title | capitalize }}</a>{% if not loop.last %}, {% endif %}{% endfor %}</span>
 {% endmacro %}
 
 
